# Freebox-Api

./: .gitignore  CMakeLists.txt  README.MD
include/: fbxpost.h  fbxsrvapp.h  interface.h  mycurl.h  utils.h
src/: fbxsrvapp.cpp  interface.cpp  main.cpp  mycurl.cpp  utils.cpp
